--- a/index.html
+++ b/index.html
@@ -1,1 +1,226 @@
-<!-- HTML 작성 -->
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="assets/favicon/favicon.png" />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="stylesheets/main.css" />
+    <title>오늘의 발견</title>
+  </head>
+  <body>
+    <header class="header">
+      <h1 class="header-logo">
+        <a href="https://www.coupang.com/">
+          <img src="assets/logo/logo.png" alt="coupang" />
+        </a>
+      </h1>
+    </header>
+    <section class="discovery">
+      <header class="discovery-header">
+        <h2 class="discovery-title">오늘의 발견</h2>
+        <span class="title-partition">|</span>
+        <h3 class="discovery-subtitle">
+          오늘 쿠팡이 엄선한 가장 핫한 제품
+        </h3>
+      </header>
+      <ul class="discovery-list">
+        <li class="discovery-list-item">
+          <form action="/">
+            <button
+              type="submit"
+              class="discovery-item-image"
+            >
+              <img
+                src="assets/discovery/honeytea.jpg"
+                alt="honeytea"
+              />
+            </button>
+            <button
+              type="submit"
+              class="discovery-item-btn"
+            >
+              <span>구매하기</span>
+            </button>
+          </form>
+        </li>
+        <li class="discovery-list-item">
+          <form action="/">
+            <button
+              type="submit"
+              class="discovery-item-image"
+            >
+              <img
+                src="assets/discovery/vaseline.jpg"
+                alt="vaseline"
+              />
+            </button>
+            <button
+              type="submit"
+              class="discovery-item-btn"
+            >
+              <span>구매하기</span>
+            </button>
+          </form>
+        </li>
+        <li class="discovery-list-item">
+          <form action="/">
+            <button
+              type="submit"
+              class="discovery-item-image"
+            >
+              <img
+                src="assets/discovery/handcream.jpg"
+                alt="handcream"
+              />
+            </button>
+            <button
+              type="submit"
+              class="discovery-item-btn"
+            >
+              <span>구매하기</span>
+            </button>
+          </form>
+        </li>
+        <li class="discovery-list-item">
+          <form action="/">
+            <button
+              type="submit"
+              class="discovery-item-image"
+            >
+              <img
+                src="assets/discovery/bibs.jpg"
+                alt="bibs"
+              />
+            </button>
+            <button
+              type="submit"
+              class="discovery-item-btn"
+            >
+              <span>구매하기</span>
+            </button>
+          </form>
+        </li>
+        <li class="discovery-list-item">
+          <form action="/">
+            <button
+              type="submit"
+              class="discovery-item-image"
+            >
+              <img
+                src="assets/discovery/hanssem.jpg"
+                alt="hanssem"
+              />
+            </button>
+            <button
+              type="submit"
+              class="discovery-item-btn"
+            >
+              <span>구매하기</span>
+            </button>
+          </form>
+        </li>
+        <li class="discovery-list-item">
+          <form action="/">
+            <button
+              type="submit"
+              class="discovery-item-image"
+            >
+              <img
+                src="assets/discovery/dumpling.jpg"
+                alt="dumpling"
+              />
+            </button>
+            <button
+              type="submit"
+              class="discovery-item-btn"
+            >
+              <span>구매하기</span>
+            </button>
+          </form>
+        </li>
+        <li class="discovery-list-item">
+          <form action="/">
+            <button
+              type="submit"
+              class="discovery-item-image"
+            >
+              <img
+                src="assets/discovery/wettissue.jpg"
+                alt="honeytea"
+              />
+            </button>
+            <button
+              type="submit"
+              class="discovery-item-btn"
+            >
+              <span>구매하기</span>
+            </button>
+          </form>
+        </li>
+        <li class="discovery-list-item">
+          <form action="/">
+            <button
+              type="submit"
+              class="discovery-item-image"
+            >
+              <img
+                src="assets/discovery/febreze.jpg"
+                alt="febreze"
+              />
+            </button>
+            <button
+              type="submit"
+              class="discovery-item-btn"
+            >
+              <span>구매하기</span>
+            </button>
+          </form>
+        </li>
+        <li class="discovery-list-item">
+          <form action="/">
+            <button
+              type="submit"
+              class="discovery-item-image"
+            >
+              <img
+                src="assets/discovery/dyson.jpg"
+                alt="dyson"
+              />
+            </button>
+            <button
+              type="submit"
+              class="discovery-item-btn"
+            >
+              <span>구매하기</span>
+            </button>
+          </form>
+        </li>
+      </ul>
+    </section>
+  </body>
+</html>
+<li class="discovery-list-item">
+  <form action="/">
+    <button type="submit" class="discovery-item-image">
+      <img
+        src="assets/discovery/honeytea.jpg"
+        alt="honeytea"
+      />
+    </button>
+    <button type="submit" class="discovery-item-btn">
+      <span>구매하기</span>
+    </button>
+  </form>
+</li>
