style and adjust markup

--- a/index.html
+++ b/index.html
@@ -20,207 +20,176 @@
     <title>오늘의 발견</title>
   </head>
   <body>
-    <header class="header">
-      <h1 class="header-logo">
-        <a href="https://www.coupang.com/">
-          <img src="assets/logo/logo.png" alt="coupang" />
-        </a>
-      </h1>
-    </header>
-    <section class="discovery">
-      <header class="discovery-header">
-        <h2 class="discovery-title">오늘의 발견</h2>
-        <span class="title-partition">|</span>
-        <h3 class="discovery-subtitle">
-          오늘 쿠팡이 엄선한 가장 핫한 제품
-        </h3>
+    <div class="wrapper">
+      <header class="header">
+        <h1 class="header-logo">
+          <a href="https://www.coupang.com/">
+            <img src="assets/logo/logo.png" alt="coupang" />
+          </a>
+        </h1>
       </header>
-      <ul class="discovery-list">
-        <li class="discovery-list-item">
-          <form action="/">
-            <button
-              type="submit"
-              class="discovery-item-image"
-            >
-              <img
-                src="assets/discovery/honeytea.jpg"
-                alt="honeytea"
-              />
-            </button>
-            <button
-              type="submit"
-              class="discovery-item-btn"
-            >
-              <span>구매하기</span>
-            </button>
-          </form>
-        </li>
-        <li class="discovery-list-item">
-          <form action="/">
-            <button
-              type="submit"
-              class="discovery-item-image"
-            >
-              <img
-                src="assets/discovery/vaseline.jpg"
-                alt="vaseline"
-              />
-            </button>
-            <button
-              type="submit"
-              class="discovery-item-btn"
-            >
-              <span>구매하기</span>
-            </button>
-          </form>
-        </li>
-        <li class="discovery-list-item">
-          <form action="/">
-            <button
-              type="submit"
-              class="discovery-item-image"
-            >
-              <img
-                src="assets/discovery/handcream.jpg"
-                alt="handcream"
-              />
-            </button>
-            <button
-              type="submit"
-              class="discovery-item-btn"
-            >
-              <span>구매하기</span>
-            </button>
-          </form>
-        </li>
-        <li class="discovery-list-item">
-          <form action="/">
-            <button
-              type="submit"
-              class="discovery-item-image"
-            >
-              <img
-                src="assets/discovery/bibs.jpg"
-                alt="bibs"
-              />
-            </button>
-            <button
-              type="submit"
-              class="discovery-item-btn"
-            >
-              <span>구매하기</span>
-            </button>
-          </form>
-        </li>
-        <li class="discovery-list-item">
-          <form action="/">
-            <button
-              type="submit"
-              class="discovery-item-image"
-            >
-              <img
-                src="assets/discovery/hanssem.jpg"
-                alt="hanssem"
-              />
-            </button>
-            <button
-              type="submit"
-              class="discovery-item-btn"
-            >
-              <span>구매하기</span>
-            </button>
-          </form>
-        </li>
-        <li class="discovery-list-item">
-          <form action="/">
-            <button
-              type="submit"
-              class="discovery-item-image"
-            >
-              <img
-                src="assets/discovery/dumpling.jpg"
-                alt="dumpling"
-              />
-            </button>
-            <button
-              type="submit"
-              class="discovery-item-btn"
-            >
-              <span>구매하기</span>
-            </button>
-          </form>
-        </li>
-        <li class="discovery-list-item">
-          <form action="/">
-            <button
-              type="submit"
-              class="discovery-item-image"
-            >
-              <img
-                src="assets/discovery/wettissue.jpg"
-                alt="honeytea"
-              />
-            </button>
-            <button
-              type="submit"
-              class="discovery-item-btn"
-            >
-              <span>구매하기</span>
-            </button>
-          </form>
-        </li>
-        <li class="discovery-list-item">
-          <form action="/">
-            <button
-              type="submit"
-              class="discovery-item-image"
-            >
-              <img
-                src="assets/discovery/febreze.jpg"
-                alt="febreze"
-              />
-            </button>
-            <button
-              type="submit"
-              class="discovery-item-btn"
-            >
-              <span>구매하기</span>
-            </button>
-          </form>
-        </li>
-        <li class="discovery-list-item">
-          <form action="/">
-            <button
-              type="submit"
-              class="discovery-item-image"
-            >
-              <img
-                src="assets/discovery/dyson.jpg"
-                alt="dyson"
-              />
-            </button>
-            <button
-              type="submit"
-              class="discovery-item-btn"
-            >
-              <span>구매하기</span>
-            </button>
-          </form>
-        </li>
-      </ul>
-    </section>
+      <section class="discovery">
+        <header class="discovery-header">
+          <h2 class="discovery-title">오늘의 발견</h2>
+          <span class="title-partition">|</span>
+          <h3 class="discovery-subtitle">
+            오늘 쿠팡이 엄선한 가장 핫한 제품
+          </h3>
+        </header>
+        <form action="/">
+          <ul class="discovery-list">
+            <li class="discovery-list-column">
+              <ul>
+                <li class="discovery-list-item item-lg">
+                  <button
+                    type="submit"
+                    class="discovery-item-image"
+                  >
+                    <img
+                      src="assets/discovery/honeytea.jpg"
+                      alt="honeytea"
+                    />
+                  </button>
+                  <button
+                    type="submit"
+                    class="discovery-item-btn"
+                  ></button>
+                </li>
+                <li class="discovery-list-item item-lg">
+                  <button
+                    type="submit"
+                    class="discovery-item-image"
+                  >
+                    <img
+                      src="assets/discovery/vaseline.jpg"
+                      alt="vaseline"
+                    />
+                  </button>
+                  <button
+                    type="submit"
+                    class="discovery-item-btn"
+                  ></button>
+                </li>
+              </ul>
+            </li>
+
+            <li class="discovery-list-column">
+              <ul>
+                <li class="discovery-list-item">
+                  <button
+                    type="submit"
+                    class="discovery-item-image"
+                  >
+                    <img
+                      src="assets/discovery/handcream.jpg"
+                      alt="handcream"
+                    />
+                  </button>
+                  <button
+                    type="submit"
+                    class="discovery-item-btn"
+                  ></button>
+                </li>
+                <li class="discovery-list-item">
+                  <button
+                    type="submit"
+                    class="discovery-item-image"
+                  >
+                    <img
+                      src="assets/discovery/bibs.jpg"
+                      alt="bibs"
+                    />
+                  </button>
+                  <button
+                    type="submit"
+                    class="discovery-item-btn"
+                  ></button>
+                </li>
+                <li class="discovery-list-item">
+                  <button
+                    type="submit"
+                    class="discovery-item-image"
+                  >
+                    <img
+                      src="assets/discovery/hanssem.jpg"
+                      alt="hanssem"
+                    />
+                  </button>
+                  <button
+                    type="submit"
+                    class="discovery-item-btn"
+                  ></button>
+                </li>
+                <li class="discovery-list-item">
+                  <button
+                    type="submit"
+                    class="discovery-item-image"
+                  >
+                    <img
+                      src="assets/discovery/dumpling.jpg"
+                      alt="dumpling"
+                    />
+                  </button>
+                  <button
+                    type="submit"
+                    class="discovery-item-btn"
+                  ></button>
+                </li>
+              </ul>
+            </li>
+
+            <li class="discovery-list-column">
+              <ul>
+                <li class="discovery-list-item item-lg">
+                  <button
+                    type="submit"
+                    class="discovery-item-image"
+                  >
+                    <img
+                      src="assets/discovery/wettissue.jpg"
+                      alt="honeytea"
+                    />
+                  </button>
+                  <button
+                    type="submit"
+                    class="discovery-item-btn"
+                  ></button>
+                </li>
+                <li class="discovery-list-item">
+                  <button
+                    type="submit"
+                    class="discovery-item-image"
+                  >
+                    <img
+                      src="assets/discovery/febreze.jpg"
+                      alt="febreze"
+                    />
+                  </button>
+                  <button
+                    type="submit"
+                    class="discovery-item-btn"
+                  ></button>
+                </li>
+                <li class="discovery-list-item">
+                  <button
+                    type="submit"
+                    class="discovery-item-image"
+                  >
+                    <img
+                      src="assets/discovery/dyson.jpg"
+                      alt="dyson"
+                    />
+                  </button>
+                  <button
+                    type="submit"
+                    class="discovery-item-btn"
+                  ></button>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </form>
+      </section>
+    </div>
   </body>
 </html>
-<li class="discovery-list-item">
-  <form action="/">
-    <button type="submit" class="discovery-item-image">
-      <img
-        src="assets/discovery/honeytea.jpg"
-        alt="honeytea"
-      />
-    </button>
-    <button type="submit" class="discovery-item-btn">
-      <span>구매하기</span>
-    </button>
-  </form>
-</li>
