change button arrow and animation

--- a/index.html
+++ b/index.html
@@ -53,7 +53,22 @@
                   <button
                     type="submit"
                     class="discovery-item-btn"
-                  ></button>
+                  >
+                    <svg
+                      width="42"
+                      height="41"
+                      viewBox="0 0 42 41"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M23.0044 20L18 15.9428L18.8326 15L25 20L18.8326 25L18 24.0572L23.0044 20Z"
+                        fill="#F4F4F4"
+                      />
+                    </svg>
+                  </button>
                 </li>
                 <li class="discovery-list-item item-lg">
                   <button
@@ -68,7 +83,22 @@
                   <button
                     type="submit"
                     class="discovery-item-btn"
-                  ></button>
+                  >
+                    <svg
+                      width="42"
+                      height="41"
+                      viewBox="0 0 42 41"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M23.0044 20L18 15.9428L18.8326 15L25 20L18.8326 25L18 24.0572L23.0044 20Z"
+                        fill="#F4F4F4"
+                      />
+                    </svg>
+                  </button>
                 </li>
               </ul>
             </li>
@@ -88,7 +118,22 @@
                   <button
                     type="submit"
                     class="discovery-item-btn"
-                  ></button>
+                  >
+                    <svg
+                      width="42"
+                      height="41"
+                      viewBox="0 0 42 41"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M23.0044 20L18 15.9428L18.8326 15L25 20L18.8326 25L18 24.0572L23.0044 20Z"
+                        fill="#F4F4F4"
+                      />
+                    </svg>
+                  </button>
                 </li>
                 <li class="discovery-list-item">
                   <button
@@ -103,7 +148,22 @@
                   <button
                     type="submit"
                     class="discovery-item-btn"
-                  ></button>
+                  >
+                    <svg
+                      width="42"
+                      height="41"
+                      viewBox="0 0 42 41"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M23.0044 20L18 15.9428L18.8326 15L25 20L18.8326 25L18 24.0572L23.0044 20Z"
+                        fill="#F4F4F4"
+                      />
+                    </svg>
+                  </button>
                 </li>
                 <li class="discovery-list-item">
                   <button
@@ -118,7 +178,22 @@
                   <button
                     type="submit"
                     class="discovery-item-btn"
-                  ></button>
+                  >
+                    <svg
+                      width="42"
+                      height="41"
+                      viewBox="0 0 42 41"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M23.0044 20L18 15.9428L18.8326 15L25 20L18.8326 25L18 24.0572L23.0044 20Z"
+                        fill="#F4F4F4"
+                      />
+                    </svg>
+                  </button>
                 </li>
                 <li class="discovery-list-item">
                   <button
@@ -133,7 +208,22 @@
                   <button
                     type="submit"
                     class="discovery-item-btn"
-                  ></button>
+                  >
+                    <svg
+                      width="42"
+                      height="41"
+                      viewBox="0 0 42 41"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M23.0044 20L18 15.9428L18.8326 15L25 20L18.8326 25L18 24.0572L23.0044 20Z"
+                        fill="#F4F4F4"
+                      />
+                    </svg>
+                  </button>
                 </li>
               </ul>
             </li>
@@ -153,7 +243,22 @@
                   <button
                     type="submit"
                     class="discovery-item-btn"
-                  ></button>
+                  >
+                    <svg
+                      width="42"
+                      height="41"
+                      viewBox="0 0 42 41"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M23.0044 20L18 15.9428L18.8326 15L25 20L18.8326 25L18 24.0572L23.0044 20Z"
+                        fill="#F4F4F4"
+                      />
+                    </svg>
+                  </button>
                 </li>
                 <li class="discovery-list-item">
                   <button
@@ -168,7 +273,22 @@
                   <button
                     type="submit"
                     class="discovery-item-btn"
-                  ></button>
+                  >
+                    <svg
+                      width="42"
+                      height="41"
+                      viewBox="0 0 42 41"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M23.0044 20L18 15.9428L18.8326 15L25 20L18.8326 25L18 24.0572L23.0044 20Z"
+                        fill="#F4F4F4"
+                      />
+                    </svg>
+                  </button>
                 </li>
                 <li class="discovery-list-item">
                   <button
@@ -183,7 +303,22 @@
                   <button
                     type="submit"
                     class="discovery-item-btn"
-                  ></button>
+                  >
+                    <svg
+                      width="42"
+                      height="41"
+                      viewBox="0 0 42 41"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M23.0044 20L18 15.9428L18.8326 15L25 20L18.8326 25L18 24.0572L23.0044 20Z"
+                        fill="#F4F4F4"
+                      />
+                    </svg>
+                  </button>
                 </li>
               </ul>
             </li>
