--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="assets/favicon/favicon.png" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="assets/favicon/favicon.ico"
+    />
     <link
       rel="preconnect"
       href="https://fonts.googleapis.com"
